# gamelink

./: README.md  pyproject.toml
src/gamelink/: __init__.py
src/gamelink/core/: bot.py  game.py  learning.py  minimax.py  sat.py
src/gamelink/games/: avelon.py  pig.py  splender.py  xo.py
src/gamelink/utils/: __init__.py  timeline.py
