[project]
name = "gamelink"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D205", "D211", "D213",
    "EM102",
    "S101",
    "TC003",
    "S311",
    "TRY003",
    "TD",
    "FIX",

    # Conflict with the formatter
    "COM812",
    "D203",
]

[tool.mypy]
strict = true
mypy_path = "src"
